--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
 springfox.documentation.swagger.v2.path=/api-docs
 server.contextPath=/
 server.port=8080
-spring.jackson.date-format=com.manulife.ap.server.RFC3339DateFormat
+spring.jackson.date-format=com.study.liyq.ap.config.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+######### Mysql configuration############
+spring.datasource.url=jdbc:mysql://localhost:3306/d_product?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=changeme
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+######### MyBatis configuration############
+mybatis.config-location=classpath:mybatis-config.xml
+
+#if you don't want mybatis-config.xml then you can configure as following
+#mybatis.type-aliases-package=com.example.domain
+#mybatis.mapper-locations=classpath:mybatis-mapper/*.xml
