support spring data redis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ server.port=8080
 spring.jackson.date-format=com.study.liyq.ap.config.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
+######### Product configuration############
+ap.product.expiration.seconds=60
+
 ######### Mysql configuration############
 spring.datasource.url=jdbc:mysql://localhost:3306/d_product?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
